@startuml

title __SHARED's Class Diagram__\n

  package shared {
    class CSVUtils {
        {static} - DEFAULT_SEPARATOR : char
        {static} - DEFAULT_QUOTE : char
        {static} + parseLine()
        {static} + parseLine()
        {static} + parseLine()
    }
  }
  

  package shared {
    class Command {
        {static} - serialVersionUID : long
        - command : String
        - data : Object
        + Command()
        + Command()
        + getCommand()
        + setCommand()
        + getData()
        + setData()
        + toString()
    }
  }
  

  package shared {
    class Console {
        - needExit : boolean
        ~ myScan : Scanner
        + Console()
        + execute()
        - readOneLinedCommands()
        - whichTypeOfInput()
        - readMultipleLinedCommand()
        + promptSave()
        {static} + parseHumanFromJson()
    }
  }
  

  package shared {
    class ConsoleClient {
        - needExit : boolean
        ~ myScan : Scanner
        + ConsoleClient()
        + execute()
        - readOneLinedCommands()
        - whichTypeOfInput()
        - readMultipleLinedCommand()
    }
  }
  

  package shared {
    class CustomCommands {
        - collection : Vector<Human>
        + CustomCommands()
        + info()
        + show()
        + remove()
        + remove_lower()
        + remove_greater()
        + add()
        + add_if_min()
        + save()
        + infoCommand()
    }
  }
  

  package shared {
    class Disability {
        - disability : String
        + Disability()
        + getName()
        + toString()
        + equals()
        + hashCode()
    }
  }
  

  package shared {
    class FileHandler {
        {static} - savePermission : Boolean
        {static} - FILEPATH : String
        {static} + getFILEPATH()
        {static} + getFileName()
        {static} + convertToVector()
        {static} + save()
        {static} + save()
        {static} + setFILEPATH()
        {static} + checkFileRead()
        {static} + checkFileWrite()
        {static} + setSavePermission()
        {static} + getSavePermission()
    }
  }
  

  package shared {
    abstract class God {
        - name : String
        - age : int
        - type : String
        - dateTime : OffsetDateTime
        + setDateTime()
        + God()
        + God()
        + God()
        + getAge()
        + getName()
        + getType()
        + getDateTime()
        + toString()
        + hashCode()
    }
  }
  

  package shared {
    class Human {
        - type : String
        - owner : String
        - skills : ArrayList<Skill>
        - disabilities : ArrayList<Disability>
        + Human()
        + Human()
        + Human()
        + welcome()
        + getOwner()
        + setOwner()
        + getSkills()
        + addSkill()
        + addDisability()
        + getDisabilities()
        + equals()
        + hashCode()
        + compareTo()
    }
  }
  

  package shared {
    class Main {
        {static} - connection : Connection
        {static} - url : String
        {static} - name : String
        {static} - pass : String
        {static} + main()
    }
  }
  

  package shared {
    class Response {
        {static} - serialVersionUID : long
        - response : Object
        + Response()
        + getResponse()
    }
  }
  

  package shared {
    class Skill {
        - name : String
        - action : String
        + Skill()
        + getName()
        + doSkill()
        + toString()
        + equals()
        + hashCode()
    }
  }
  

  package shared {
    class Temp {
        ~ name : String
        ~ age : int
        ~ disability : String
        + createHuman()
    }
  }
  

  Command -up-|> Serializable
  Console o-- CustomCommands : customCommands
  Disability -up-|> Serializable
  God -up-|> Serializable
  Human -up-|> Serializable
  Human -up-|> Comparable
  Human -up-|> God
  Response -up-|> Serializable
  Skill -up-|> Serializable
  Temp -up-|> Serializable
  Temp o-- Skill : skill


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
